# 24205-Trusov-OPP

./: .gitignore
lab-1/: main.cpp  v1.cpp  v1.ods  v2.cpp
lab-2/: test.cpp  test.ods  v1.cpp  v2.cpp
lab-3/: main.cpp  test.ods
lab4/: BitArray.cpp  BitArray.h  CMakeLists.txt  Cell.cpp  Cell.h  GameField.cpp  GameField.h  GameOfLive.cpp  GameOfLive.h  Globals.h  Rule.cpp  Rule.h  main.cpp  v1.ods
lab5/: main.cpp  v1.ods
